--- a/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
+++ b/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
@@ -108,7 +108,10 @@
     <Content Include="Assets\add.png" />
     <Content Include="Assets\delete.png" />
     <Content Include="Assets\filter.png" />
+    <Content Include="Assets\genres.png" />
     <Content Include="Assets\local.png" />
+    <Content Include="Assets\movie.png" />
+    <Content Include="Assets\moviekus.png" />
     <Content Include="Assets\netflix.png" />
     <Content Include="Assets\prime.png" />
     <Content Include="Assets\save.png" />
