--- a/Moviekus/Moviekus/Moviekus.csproj
+++ b/Moviekus/Moviekus/Moviekus.csproj
@@ -42,6 +42,9 @@
     <EmbeddedResource Update="Views\Genres\GenresPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Movies\MovieSelectionPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\RatingBar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
