--- a/Moviekus/Moviekus.Android/Moviekus.Android.csproj
+++ b/Moviekus/Moviekus.Android/Moviekus.Android.csproj
@@ -146,5 +146,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\moviedb.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\settings.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
