--- a/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
+++ b/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
@@ -144,6 +144,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="search.png" />
+    <Content Include="settings.png" />
     <Content Include="sources.png" />
     <Content Include="star.png" />
     <Content Include="star_empty.png" />
