--- a/Moviekus/Moviekus/Moviekus.csproj
+++ b/Moviekus/Moviekus/Moviekus.csproj
@@ -25,6 +25,9 @@
     <Compile Update="Views\Filter\FilterDetailPage.xaml.cs">
       <DependentUpon>FilterDetailPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Filter\FilterEntrySourceCellTemplate.xaml.cs">
+      <DependentUpon>FilterEntrySourceCellTemplate.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Movies\MovieDetailPage.xaml.cs">
       <DependentUpon>MovieDetailPage.xaml</DependentUpon>
     </Compile>
@@ -46,7 +49,10 @@
     <EmbeddedResource Update="Views\Filter\FilterEntryEntryCellTemplate.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\Filter\FilterEntryPickerCellTemplate.xaml">
+    <EmbeddedResource Update="Views\Filter\FilterEntryGenreCellTemplate.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Filter\FilterEntrySourceCellTemplate.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Filter\FilterEntryRatingCellTemplate.xaml">
