--- a/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
+++ b/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
@@ -143,6 +143,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="remove.png" />
     <Content Include="search.png" />
     <Content Include="settings.png" />
     <Content Include="sources.png" />
