--- a/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
+++ b/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
@@ -114,7 +114,7 @@
     <Content Include="moviedb.png" />
     <Content Include="moviekus.png" />
     <Content Include="netflix.png" />
-    <Content Include="new.png" />
+    <Content Include="addnew.png" />
     <Content Include="prime.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LargeTile.scale-100.png" />
@@ -144,14 +144,14 @@
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
-    <Content Include="remove.png" />
+    <Content Include="remove_entry.png" />
     <Content Include="search.png" />
     <Content Include="settings.png" />
     <Content Include="sources.png" />
     <Content Include="star.png" />
     <Content Include="star_empty.png" />
     <Content Include="xamarin_logo.png" />
-    <Content Include="add.png" />
+    <Content Include="add_entry.png" />
     <Content Include="save.png" />
     <Content Include="cancel.png" />
   </ItemGroup>
