Initialer Einbau von NLog

--- a/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
+++ b/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
@@ -182,6 +182,11 @@
       <Name>Moviekus</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
