--- a/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
+++ b/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
@@ -110,6 +110,7 @@
     <Content Include="filter.png" />
     <Content Include="genres.png" />
     <Content Include="local.png" />
+    <Content Include="logfile.png" />
     <Content Include="movie.png" />
     <Content Include="moviedb.png" />
     <Content Include="moviekus.png" />
