--- a/Moviekus/Moviekus.Android/Moviekus.Android.csproj
+++ b/Moviekus/Moviekus.Android/Moviekus.Android.csproj
@@ -59,6 +59,9 @@
     <PackageReference Include="Autofac">
       <Version>5.1.2</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Identity.Client">
+      <Version>4.10.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3" />
   </ItemGroup>
@@ -160,6 +163,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\logfile.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\onedrive.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
