--- a/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
+++ b/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
@@ -116,6 +116,7 @@
     <Content Include="moviekus.png" />
     <Content Include="netflix.png" />
     <Content Include="addnew.png" />
+    <Content Include="onedrive.png" />
     <Content Include="prime.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LargeTile.scale-100.png" />
@@ -172,6 +173,9 @@
     </PackageReference>
     <PackageReference Include="Autofac">
       <Version>5.1.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Identity.Client">
+      <Version>4.10.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.10" />
