--- a/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
+++ b/Moviekus/Moviekus.UWP/Moviekus.UWP.csproj
@@ -97,6 +97,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PhotoPickerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
