--- a/Moviekus/Moviekus.Android/Moviekus.Android.csproj
+++ b/Moviekus/Moviekus.Android/Moviekus.Android.csproj
@@ -171,5 +171,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\sorting.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\imdb.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
