--- a/Moviekus/Moviekus.Web/Moviekus.Web.csproj
+++ b/Moviekus/Moviekus.Web/Moviekus.Web.csproj
@@ -8,7 +8,19 @@
     <Folder Include="Pages\Filter\" />
     <Folder Include="Pages\Genres\" />
     <Folder Include="Pages\Movies\" />
-    <Folder Include="Pages\Sources\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Moviekus\Moviekus.csproj" />
   </ItemGroup>
 
 </Project>
